changing color of offer in home page

--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -460,7 +460,7 @@
 
 .special-offer-box .offer-text {
   font-size: 1.4rem;
-  color: #6b4e00;
+  color: #000;
   font-weight: 600;
   margin-bottom: 0.5rem;
 }
