Modifying Appoitment Booking system

--- a/src/app/features/booking/components/booking/booking.component.html
+++ b/src/app/features/booking/components/booking/booking.component.html
@@ -93,7 +93,8 @@
   <p>
     Your appointment is confirmed for
     <strong>{{ submittedBooking.date }}</strong> at
-    <strong>{{ submittedBooking.time }}</strong>.
+    <strong>{{ submittedBooking.time }}</strong>.<br>
+    Booking details are sent to your email.
   </p>
 </div>
 
