Adding Policies tab

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -36,6 +36,7 @@
         <li><a href="/services">Services</a></li>
         <li><a href="/booking">Book Appointment</a></li>
         <li><a href="/specialOffer">Special Offers</a></li>
+        <li><a href="/policy">Our Policies</a></li>
         <li><a href="/contact">Contact us</a></li>
       </ul>
     </div>
