--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,6 +12,7 @@
       <a routerLink="/services">Services</a>
       <a routerLink="/booking">Book Appointment</a>
       <a routerLink="/specialOffer">Special Offers</a>
+      <a routerLink="/policy">Our Policies</a>
       <a routerLink="/contact">Contact us</a>
       
     </nav>
