Changing bg color

--- a/src/app/features/contact/components/contact/contact.component.css
+++ b/src/app/features/contact/components/contact/contact.component.css
@@ -6,7 +6,7 @@
 .contact-section .container {
   max-width: 800px;
   margin: auto;
-  background: #f7f2e8;
+  background: #cac5ba;
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
