--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -14,7 +14,7 @@
         <a href="https://www.facebook.com/share/1Cae4GEhrv/" target="_blank" aria-label="Facebook">
           <img src="assets/icons/facebook.svg" alt="Facebook" />
         </a>
-        <a href="https://www.instagram.com/rsbusinesstech" target="_blank" aria-label="Instagram">
+        <a href="https://www.instagram.com/lashmap.beautystudio?igsh=amt6YXNqODI3NGV1&utm_source=qr" target="_blank" aria-label="Instagram">
           <img src="assets/icons/instagram.svg" alt="Instagram" />
         </a>
         <a href="https://www.tiktok.com/@rs.business.tech" target="_blank" aria-label="TikTok">
@@ -34,7 +34,8 @@
         <li><a href="/about">About us</a></li>
         <!-- <li><a href="/products">Products</a></li> -->
         <li><a href="/services">Services</a></li>
-        <li><a href="/booking">Book Appointment</a></li>
+        <!-- <li><a href="/booking">Book Appointment</a></li> -->
+        <li><a href="https://www.fresha.com/a/lashmap-beauty-studio-melbourne-level-10-1-elizabeth-st-jj0y3knw" target="_blank" rel="noopener">Book Appointment</a></li>
         <li><a href="/specialOffer">Special Offers</a></li>
         <li><a href="/policy">Our Policies</a></li>
         <li><a href="/contact">Contact us</a></li>
