--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,10 @@
 </main>
 
 <app-footer></app-footer> -->
+
+<!-- app.component.html -->
+<div style="padding: 2rem; font-family: sans-serif; text-align: center;">
+  <h2>503 Service Unavailable</h2>
+  <p>The server is currently unable to handle the request.<br>Please try again later.</p>
+</div>
+
