--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,7 @@
-<!-- <app-header></app-header>
+<app-header></app-header>
 
 <main class="main-content">
   <router-outlet></router-outlet>
 </main>
 
-<app-footer></app-footer> -->
-
-<!-- app.component.html -->
-<div style="padding: 2rem; font-family: sans-serif; text-align: center;">
-  <h2>503 Service Unavailable</h2>
-  <p>The server is currently unable to handle the request.<br>Please try again later.</p>
-</div>
-
+<app-footer></app-footer>
