--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="container">
     <a routerLink="/" class="logo">
-      <img src="/assets/icons/logo-lashmapbeautystudio.png" alt="LashMap Beauty Studio" />
+      <img src="/assets/icons/logo-lashmapbeautystudio.jpeg" alt="LashMap Beauty Studio" />
     </a>
 
     <nav class="nav-links" [class.mobile-menu-open]="menuOpen">
@@ -15,7 +15,6 @@
       <a routerLink="/specialOffer">Special Offers</a>
       <a routerLink="/policy">Our Policies</a>
       <a routerLink="/contact">Contact us</a>
-      
     </nav>
 
     <button class="menu-toggle" (click)="menuOpen = !menuOpen">
