--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
     <!-- Logo + Connect with us + Social Icons (Desktop Only) -->
     <div class="footer-logo-connect desktop-only">
       <div class="footer-logo">
-        <img src="/assets/icons/logo-lashmapbeautystudio.jpeg" alt="RS BusinessTech Logo" />
+        <img src="/assets/icons/logo-lashmapbeautystudio.png" alt="RS BusinessTech Logo" />
       </div>
       <div class="connect-us"><strong>Connect with us on</strong></div>
       <div class="social-icons">
@@ -83,7 +83,7 @@
             <img src="assets/icons/gmail.png" alt="Gmail" />
           </a>
         </div>
-        <img class="footer-logo-mobile" src="/assets/icons/logo-lashmapbeautystudio.jpeg" alt="RS BusinessTech Logo" />
+        <img class="footer-logo-mobile" src="/assets/icons/logo-lashmapbeautystudio.png" alt="RS BusinessTech Logo" />
         <div class="footer-bottom">
           <strong>&copy; 2025 LashMap Beauty Studio (All rights reserved)</strong>
         </div>
