--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -8,18 +8,18 @@
       </div>
       <div class="connect-us"><strong>Connect with us on</strong></div>
       <div class="social-icons">
-        <a href="https://wa.me/+61411158881" target="_blank" aria-label="WhatsApp">
-          <img src="assets/icons/whatsapp.svg" alt="WhatsApp" />
-        </a>
-        <a href="https://www.facebook.com/share/1Cae4GEhrv/" target="_blank" aria-label="Facebook">
-          <img src="assets/icons/facebook.svg" alt="Facebook" />
-        </a>
         <a href="https://www.instagram.com/lashmap.beautystudio?igsh=amt6YXNqODI3NGV1&utm_source=qr" target="_blank" aria-label="Instagram">
           <img src="assets/icons/instagram.svg" alt="Instagram" />
         </a>
-        <a href="https://www.tiktok.com/@rs.business.tech" target="_blank" aria-label="TikTok">
-          <img src="assets/icons/tiktok.svg" alt="TikTok" />
+        <a href="https://wa.me/+61411158881" target="_blank" aria-label="WhatsApp">
+          <img src="assets/icons/whatsapp.svg" alt="WhatsApp" />
         </a>
+        <!-- <a href="https://www.facebook.com/share/1Cae4GEhrv/" target="_blank" aria-label="Facebook">
+          <img src="assets/icons/facebook.svg" alt="Facebook" />
+        </a> -->
+        <!-- <a href="https://www.tiktok.com/@rs.business.tech" target="_blank" aria-label="TikTok">
+          <img src="assets/icons/tiktok.svg" alt="TikTok" />
+        </a> -->
         <a href="mailto:lashmapbeautystudio@gmail.com" target="_blank" aria-label="Email">
           <img src="assets/icons/gmail.png" alt="Gmail" />
         </a>
@@ -67,19 +67,19 @@
       <div class="mobile-connect-social">
         <div class="connect-us"><strong>Connect with us on</strong></div>
         <div class="social-icons">
-          <a href="https://wa.me/+61411158881" target="_blank" aria-label="WhatsApp">
-            <img src="assets/icons/whatsapp.svg" alt="WhatsApp" />
-          </a>
-          <a href="https://www.facebook.com/share/1Cae4GEhrv/" target="_blank" aria-label="Facebook">
-            <img src="assets/icons/facebook.svg" alt="Facebook" />
-          </a>
           <a href="https://www.instagram.com/rsbusinesstech" target="_blank" aria-label="Instagram">
             <img src="assets/icons/instagram.svg" alt="Instagram" />
           </a>
-          <a href="https://www.tiktok.com/@rs.business.tech" target="_blank" aria-label="TikTok">
-            <img src="assets/icons/tiktok.svg" alt="TikTok" />
+          <a href="https://wa.me/+61411158881" target="_blank" aria-label="WhatsApp">
+            <img src="assets/icons/whatsapp.svg" alt="WhatsApp" />
           </a>
-          <a href="mailto:lashmapbeautystudio.com" target="_blank" aria-label="Email">
+          <!-- <a href="https://www.facebook.com/share/1Cae4GEhrv/" target="_blank" aria-label="Facebook">
+            <img src="assets/icons/facebook.svg" alt="Facebook" />
+          </a> -->
+          <!-- <a href="https://www.tiktok.com/@rs.business.tech" target="_blank" aria-label="TikTok">
+            <img src="assets/icons/tiktok.svg" alt="TikTok" />
+          </a> -->
+          <a href="mailto:lashmapbeautystudio@gmail.com" target="_blank" aria-label="Email">
             <img src="assets/icons/gmail.png" alt="Gmail" />
           </a>
         </div>
