Changing IG URL

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -67,7 +67,7 @@
       <div class="mobile-connect-social">
         <div class="connect-us"><strong>Connect with us on</strong></div>
         <div class="social-icons">
-          <a href="https://www.instagram.com/rsbusinesstech" target="_blank" aria-label="Instagram">
+          <a href="https://www.instagram.com/lashmap.beautystudio?igsh=amt6YXNqODI3NGV1&utm_source=qr" target="_blank" aria-label="Instagram">
             <img src="assets/icons/instagram.svg" alt="Instagram" />
           </a>
           <a href="https://wa.me/+61411158881" target="_blank" aria-label="WhatsApp">
