--- a/src/app/features/services/components/services/services.component.html
+++ b/src/app/features/services/components/services/services.component.html
@@ -37,11 +37,11 @@
             }}
           </p>
 
-          <div class="pricing">
+          <!-- <div class="pricing">
             <span *ngIf="service.juniorPrice">Junior {{ service.juniorPrice }}</span>
             <span *ngIf="service.seniorPrice"> | Senior {{ service.seniorPrice }}</span>
             <span *ngIf="service.price">{{ service.price }}</span>
-          </div>
+          </div> -->
 
           <small>{{ service.duration }}</small>
 
