--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -221,7 +221,8 @@
   font-size: 2.5rem;
   margin-bottom: 2rem;
   /* color: #830707; */
-    color: #7d5a3c;
+    /* color: #7d5a3c; */
+    color: #000;
   animation: bounceIn 5s ease-in-out 0.2s infinite; /* delay of 0.5s with frequency of 5sec */
 }
 
@@ -325,8 +326,8 @@
 }
 
 .home-about-preview h2 {
-  /* color: #830707; */
-    color: #7d5a3c;
+  color: #000;
+    /* color: #7d5a3c; */
   margin-bottom: 1rem;
   font-size: 2.0rem;
   font-weight: 700;
@@ -449,7 +450,8 @@
 }
 
 .special-offer-box .section-title {
-  color: #d67e00; /* Darker warm tone */
+  color: #d67e00; 
+  /* color: #000; */
   font-size: 2.5rem;
   margin-bottom: 1rem;
   font-weight: 700;
