--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,15 +3,15 @@
   <div class="footer-top">
     <!-- Logo + Connect with us + Social Icons (Desktop Only) -->
     <div class="footer-logo-connect desktop-only">
-      <div class="footer-logo">
+      <!-- <div class="footer-logo">
         <img src="/assets/icons/logo-lashmapbeautystudio.jpeg" alt="RS BusinessTech Logo" />
-      </div>
+      </div> -->
       <div class="connect-us"><strong>Connect with us on</strong></div>
       <div class="social-icons">
         <a href="https://www.instagram.com/lashmap.beautystudio?igsh=amt6YXNqODI3NGV1&utm_source=qr" target="_blank" aria-label="Instagram">
           <img src="assets/icons/instagram.svg" alt="Instagram" />
         </a>
-        <a href="https://wa.me/+61411158881" target="_blank" aria-label="WhatsApp">
+        <a href="https://wa.me/+610450096817" target="_blank" aria-label="WhatsApp">
           <img src="assets/icons/whatsapp.svg" alt="WhatsApp" />
         </a>
         <!-- <a href="https://www.facebook.com/share/1Cae4GEhrv/" target="_blank" aria-label="Facebook">
@@ -34,8 +34,9 @@
         <li><a href="/about">About us</a></li>
         <!-- <li><a href="/products">Products</a></li> -->
         <li><a href="/services">Services</a></li>
-        <!-- <li><a href="/booking">Book Appointment</a></li> -->
-        <li><a href="https://www.fresha.com/a/lashmap-beauty-studio-melbourne-level-10-1-elizabeth-st-jj0y3knw" target="_blank" rel="noopener">Book Appointment</a></li>
+        <!-- <li><a href="/booking">Book Appointment</a></li> --> 
+        <!-- <li><a href="https://www.fresha.com/a/lashmap-beauty-studio-melbourne-level-10-1-elizabeth-st-jj0y3knw" target="_blank" rel="noopener">Book Appointment</a></li> -->
+         <li><a href="https://www.instagram.com/lashmap.beautystudio?igsh=amt6YXNqODI3NGV1&utm_source=qr" target="_blank" rel="noopener">Book Appointment</a></li>
         <li><a href="/specialOffer">Special Offers</a></li>
         <li><a href="/policy">Our Policies</a></li>
         <li><a href="/contact">Contact us</a></li>
@@ -70,7 +71,7 @@
           <a href="https://www.instagram.com/lashmap.beautystudio?igsh=amt6YXNqODI3NGV1&utm_source=qr" target="_blank" aria-label="Instagram">
             <img src="assets/icons/instagram.svg" alt="Instagram" />
           </a>
-          <a href="https://wa.me/+61411158881" target="_blank" aria-label="WhatsApp">
+          <a href="https://wa.me/+610450096817" target="_blank" aria-label="WhatsApp">
             <img src="assets/icons/whatsapp.svg" alt="WhatsApp" />
           </a>
           <!-- <a href="https://www.facebook.com/share/1Cae4GEhrv/" target="_blank" aria-label="Facebook">
