--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,7 +11,8 @@
       <!-- <a routerLink="/products">Products</a> -->
       <a routerLink="/services">Services</a>
       <!-- <a routerLink="/booking">Book Appointment</a> -->
-      <a href="https://www.fresha.com/a/lashmap-beauty-studio-melbourne-level-10-1-elizabeth-st-jj0y3knw" target="_blank" rel="noopener">Book Appointment</a>
+      <!-- <a href="https://www.fresha.com/a/lashmap-beauty-studio-melbourne-level-10-1-elizabeth-st-jj0y3knw" target="_blank" rel="noopener">Book Appointment</a> -->
+       <a href="https://www.instagram.com/lashmap.beautystudio?igsh=amt6YXNqODI3NGV1&utm_source=qr" target="_blank" rel="noopener">Book Appointment</a>
       <a routerLink="/specialOffer">Special Offers</a>
       <a routerLink="/policy">Our Policies</a>
       <a routerLink="/contact">Contact us</a>
