--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -84,7 +84,7 @@
             <img src="assets/icons/gmail.png" alt="Gmail" />
           </a>
         </div>
-        <img class="footer-logo-mobile" src="/assets/icons/logo-lashmapbeautystudio.jpeg" alt="RS BusinessTech Logo" />
+        <!-- <img class="footer-logo-mobile" src="/assets/icons/logo-lashmapbeautystudio.jpeg" alt="RS BusinessTech Logo" /> -->
         <div class="footer-bottom">
           <strong>&copy; 2025 LashMap Beauty Studio (All rights reserved)</strong>
         </div>
