--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -25,7 +25,8 @@
   font-size: 1.5rem;
   background: none;
   border: none;
-  color: #fff;
+  /* color: #fff; */
+  color: #000;
 }
 
 .site-header .container .nav-links {
@@ -57,6 +58,7 @@
 @media (max-width: 768px) {
   .site-header .container .menu-toggle {
     display: block;
+    /* color: black; */
   }
 
   .site-header .container .nav-links {
