--- a/src/app/features/about/components/about/about.component.html
+++ b/src/app/features/about/components/about/about.component.html
@@ -66,7 +66,7 @@
        <!-- Google Maps Embed -->
      <iframe
        class="google-map"
-       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.837957124593!2d144.96022631589246!3d-37.81627974204751!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d43f1f4f4ed%3A0x38c7608285edb10c!2s1%20Elizabeth%20St%2C%20Melbourne%20VIC%203000%2C%20Australia!5e0!3m2!1sen!2sus!4v1663152827894!5m2!1sen!2sus"
+       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3738.6635426348794!2d144.9620509766014!3d-37.81805563428446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad643dad412825b%3A0xb9f37826a321a73f!2sLashMap%20beauty%20studio!5e1!3m2!1sen!2smy!4v1768129208549!5m2!1sen!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
        width="100%"
        height="300"
        style="border:0;"
