--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -47,7 +47,7 @@
     <div class="footer-section address-section">
       <h3 class="address-title">Our Address</h3>
       <ul class="address-list">
-        <li>📍 <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3738.6635426348794!2d144.9620509766014!3d-37.81805563428446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad643dad412825b%3A0xb9f37826a321a73f!2sLashMap%20beauty%20studio!5e1!3m2!1sen!2smy!4v1768129208549!5m2!1sen!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" target="_blank" rel="noopener noreferrer">View us on Google Map</a></li>
+        <li>📍 <a href="https://www.google.com/maps?ll=-37.81806,144.964626&z=15&t=h&hl=en&gl=MY&mapclient=embed&cid=13399185423698339647">View us on Google Map</a></li>
         <li>✉️ <a href="mailto:lashmapbeautystudio@gmail.com">Send email</a></li>
         <li>📞 <a href="tel:+610450096817">Call Now</a></li>
       </ul>
