--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -47,7 +47,7 @@
     <div class="footer-section address-section">
       <h3 class="address-title">Our Address</h3>
       <ul class="address-list">
-        <li>📍 <a href="https://www.google.com/maps?ll=-37.81806,144.964626&z=15&t=h&hl=en&gl=MY&mapclient=embed&cid=13399185423698339647">View us on Google Map</a></li>
+        <li> <a href="https://www.google.com/maps?ll=-37.81806,144.964626&z=15&t=h&hl=en&gl=MY&mapclient=embed&cid=13399185423698339647"> <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png" alt="Location" style="width:20px; height:20px;">&nbsp;View us on Google Map</a></li>
         <li>✉️ <a href="mailto:lashmapbeautystudio@gmail.com">Send email</a></li>
         <li>📞 <a href="tel:+610450096817">Call Now</a></li>
       </ul>
