--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -73,15 +73,21 @@
     </p>
     <div class="owners">
       <article class="owner" itemscope itemtype="http://schema.org/Person">
-        <h3 itemprop="name">Ah Ling</h3>
+        <h3 itemprop="name">Jo – Senior Lash Technician</h3>
         <p itemprop="description">
-          Co-founder and lead stylist with over 5+ years of experience in beauty and wellness.
+          Jo is a friendly and experienced lash technician with over 7 years of experience in the beauty industry.She is known for her patience and keen eye for detail, ensuring every set of lashes is carefully tailored to suit each client
         </p>
       </article>
       <article class="owner" itemscope itemtype="http://schema.org/Person">
-        <h3 itemprop="name">Ah Seng</h3>
+        <h3 itemprop="name">Ling – Senior Lash & Nail Technician</h3>
         <p itemprop="description">
-          Co-founder and business strategist passionate about customer satisfaction and service excellence.
+          Ling is a talented lash and nail technician with over 9 years of experience, including 7 years in Malaysia and 2 years in Melbourne.
+        </p>
+      </article>
+      <article class="owner" itemscope itemtype="http://schema.org/Person">
+        <h3 itemprop="name">Amie – Senior Lash & Brow Specialist</h3>
+        <p itemprop="description">
+          Meet Amie! With 4 years of experience in the lash and brow industry, she loves helping clients feel confident and refreshed.
         </p>
       </article>
     </div>
