--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -75,7 +75,7 @@
       <article class="owner" itemscope itemtype="http://schema.org/Person">
         <h3 itemprop="name">Jo – Senior Lash Technician</h3>
         <p itemprop="description">
-          Jo is a friendly and experienced lash technician with over 7 years of experience in the beauty industry.She is known for her patience and keen eye for detail, ensuring every set of lashes is carefully tailored to suit each client
+          Jo is a friendly and experienced lash technician with over 7 years of experience in the beauty industry.
         </p>
       </article>
       <article class="owner" itemscope itemtype="http://schema.org/Person">
